--- a/v3/index.html
+++ b/v3/index.html
@@ -32,7 +32,7 @@
 			width: 100%;
 			top: 0;
 			left: 0;
-			z-index: 10;
+			z-index: 10; /* Ensure the navbar stays on top of other elements */
 			margin-bottom: 0;
 		}
 
@@ -43,77 +43,76 @@
 		.flex-parent {
 			display: flex;
 			flex-direction: column;
-			gap: 1px;
-			padding: 0;
+			gap: 1.5px;
+			padding: 0; /* do i have to do this */
 			background-color: black;
 			width: 100vw;
 			height: 100vh;
 			padding-top: 60px;
+			transition: .5s;
 		}
-
+/* where is the title */
 		.flex-child {
-			flex-grow: 1;
+			flex-grow: 1; /* does this always be 1 */
 			display: flex;
-			flex-direction: column; /* Ensures single column */
-			justify-content: center;
+			flex-direction: column; 
+			justify-content: center; /* vertically centers the child elements inside */
 			align-items: center;
-			transition: flex-grow .5s, background-color .5s;
+			transition: flex-grow .5s ease-in-out, background-color .5s ease-in-out;
+			/* is there a better way of smooth transition */
 			overflow: hidden;
 			position: relative;
-			color: black; /* Ensures the text color starts as black */
+			color: white;
 			font-size: 19px;
 			padding: 20px;
-			line-height: 1.5;
+			line-height: 1.2;
 			word-wrap: break-word;
-			text-align: left; /* Text is now left-aligned */
+			text-align: left;
 			background-color: transparent;
-			column-count: 1; /* Forces a single column */
-			column-gap: 0;   /* No gap between columns */
 		}
 
-		/* Initially hide the text inside the blocks */
+		.flex-child:hover {
+			flex-grow: 1000;
+			height: 1000px; /* is there a better way */
+			overflow: hidden;
+		}
+
 		.flex-child p {
-			display: none;
-			font-size: 16px; /* Set smaller font size for the paragraphs */
-			margin-bottom: 20px; /* Adds extra space between paragraphs */
+			display: none;/* Initially hide the text inside the blocks */
+		}
+
+	
+		.flex-child:hover p {
+			display: block;	/* Show the text on hover */
+			font-size: 16px;
+			margin-bottom: 20px; /* Adds extra space between inside paragraphs */
 			margin-left: 300px;
 			margin-right: 300px;
 		}
 
-		/* Show the text on hover */
-		.flex-child:hover p {
-			display: block;
-		}
-
-		.flex-child:hover {
-			flex-grow: 3;
-			height: 500px;
-			overflow: hidden;
-		}
-
-		/* Hover styles for different sections */
+	
 		.flex-child:hover.section-1 {
-			background-color: #04FF00;
+			background-color: black;
 		}
 
 		.flex-child:hover.section-2 {
-			background-color: #FFFF00;
+			background-color: black;
 		}
 
 		.flex-child:hover.section-3 {
-			background-color: #FF5E00;
+			background-color: black;
 		}
 
 		.flex-child:hover.section-4 {
-			background-color: #FF0037;
+			background-color:black;
 		}
 
 		.flex-child:hover.section-5 {
-			background-color: #B921FF;
+			background-color: black;
 		}
 
 		.flex-child:hover.section-6 {
-			background-color: #00FFAE;
+			background-color: black;
 		}
 
 		.flex-child:hover > .title {
@@ -122,12 +121,12 @@
 
 		.title {
 			font-size: 5vw;
-			text-align: center;
+			text-align: center; /* align-items: center; */
 			line-height: 1.1;
 			color: black;
 		}
 
-		/* Section background colors */
+	
 		.section-1 {
 			background-color: #04FF00;
 		}
@@ -167,6 +166,27 @@
 				font-size: 18px;
 				line-height: 1.3;
 			}
+
+
+			
+			.flex-child a {
+   
+    color: rgb(0, 255, 225); 
+  
+    font-size: 100px; 
+
+    transition: background-color 0.3s ease; 
+}
+
+.flex-child a:hover {
+    color: rgb(0, 255, 225); 
+  
+    font-size: 100px; 
+}
+
+
+
+
 		}
 	</style>
 </head>
@@ -206,14 +226,9 @@
 
 		<div class="flex-child section-6">
 			<span class="title">Zine Series</span>
-			<p><a href="https://hatopress.net/products/no-44-emoticons-don-t-have-wrinkles-by-luna-maurer-and-roel-wouters" target="_blank">Buy the Zines</a></p>
-
-			<p><a href="https://hatopress.net/products/no-44-emoticons-don-t-have-wrinkles-by-luna-maurer-and-roel-wouters" target="_blank">Buy the Zines</a></p>
-
-			<p><a href="https://hatopress.net/products/no-44-emoticons-don-t-have-wrinkles-by-luna-maurer-and-roel-wouters" target="_blank">Buy the Zines</a></p>
-
-			<p><a href="https://hatopress.net/products/no-44-emoticons-don-t-have-wrinkles-by-luna-maurer-and-roel-wouters" target="_blank">Buy the Zines</a></p>
-
-			<p><a href="https://hatopress.net/products/no-44-emoticons-don-t-have-wrinkles-by-luna-maurer-and-roel-wouters" target="_blank">Buy the Zines</a></p>
+			<p>
+				<a href="https://hatopress.net/products/no-44-emoticons-don-t-have-wrinkles-by-luna-maurer-and-roel-wouters" target="_blank">Buy the Zines</a>
+			</p>
 		</div>
+		
 		
